zastąpienie liczb stałymi wraz z ich opisem